--- a/eTickets/Views/Orders/ShoppingCart.cshtml
+++ b/eTickets/Views/Orders/ShoppingCart.cshtml
@@ -1,5 +1,4 @@
-﻿@using eTickets.Data.ViewModels;
-@model ShoppingCartVM
+﻿@model ShoppingCartVM
 
 @{
     ViewData["Title"] = "Shopping cart summary";
