--- a/eTickets/Views/Movies/Index.cshtml
+++ b/eTickets/Views/Movies/Index.cshtml
@@ -4,11 +4,62 @@
     ViewData["Title"] = "List of Movies";
 }
 
+
+@* Upcoming movies *@
+<h3 >Upcoming Movies</h3>
+<hr/>
+<div id="carouselExampleCaptions" class="carousel slide mb-5" style="height: 70vh;" data-ride="carousel">
+    <ol class="carousel-indicators">
+        @foreach (var item in Model.Select((value, index) => new { Value = value, Index = index }))
+        {
+            <li data-target="#carouselExampleCaptions" data-slide-to="@item.Index" class="@(item.Index == 0 ? "active" : "")"></li>
+        }
+
+    </ol>
+    <div class="carousel-inner" style="background-color: #000000;">
+        @foreach (var item in Model.Select((value, index) => new { Value = value, Index = index }))
+        {
+            <div class="carousel-item h-75 @(item.Index == 0 ? "active" : "")">
+                @* add background overlay *@
+                <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0,0,0,0.5); width: 100%; height: 100%; top: 0; left: 0; position: absolute; z-index: 1;">
+
+
+                </div>
+
+                <img src="@item.Value.ImageURL" class="w-auto mx-auto d-block" style="height:70vh;" alt="@item.Value.Name">
+                <div class="carousel-caption d-none d-md-block bg-warning" style="bottom: 0">
+                    <div class="d-flex px-5  align-items-center justify-content-between">
+                        <div class="text-left">
+                            <h5>@item.Value.Name</h5>
+                            <p>@item.Value.Description</p>
+                        </div>
+                        <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Value.Id">
+                            <i class="bi bi-eye-fill"></i> Show Details
+                        </a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+    <button class="carousel-control-prev bg-transparent border-0" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next bg-transparent border-0" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </button>
+</div>
+
+
+<h3 >Latest Additions</h3>
+<hr/>
+
 <div class="row">
     @foreach (var item in Model)
     {
         <div class="col-md-4 col-xs-6 border-primary mb-3">
-            <div class="card mb-3" style="max-width: 540px;">
+            <div class="card mb-3" style="max-width: 540px;border-radius: 1rem;overflow: hidden">
                 <div class="row g-0">
                     <div class="col-md-12">
                         <div class="card-header text-white bg-info">
@@ -17,7 +68,9 @@
                                     @item.Name
                                     @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                                     {
-                                        <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square"></i></a>
+                                        <a class="text-white float-right" asp-action="Edit" asp-route-id="@item.Id">
+                                            <i class="bi bi-pencil-square"></i>
+                                        </a>
                                     }
                                 </h5>
                             </p>
@@ -29,10 +82,18 @@
                     <div class="col-md-6">
                         <div class="card-body">
                             <p class="card-text">@item.Description</p>
-                            <p class="card-text"><b>Cinema: </b>@item.Cinema.Name</p>
-                            <p class="card-text"><b>Category: </b>@item.MovieCategory</p>
-                            <p class="card-text"><b>Start Date: </b>@item.StartDate.ToString("dd MMM yy")</p>
-                            <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
+                            <p class="card-text">
+                                <b>Cinema: </b>@item.Cinema.Name
+                            </p>
+                            <p class="card-text">
+                                <b>Category: </b>@item.MovieCategory
+                            </p>
+                            <p class="card-text">
+                                <b>Start Date: </b>@item.StartDate.ToString("dd MMM yy")
+                            </p>
+                            <p class="card-text">
+                                <b>End Date: </b>@item.EndDate.ToString("dd MMM yy")
+                            </p>
                             <p class="card-text ">
                                 <b>Status: </b>
                                 @if (DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
@@ -57,11 +118,12 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
-                                <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")" 
-                                   asp-controller="Orders" 
-                                   asp-action="AddItemToShoppingCart" 
+                                <a class="btn btn-success text-white @((DateTime.Now > item.EndDate) ? "disabled" : "")"
+                                   asp-controller="Orders"
+                                   asp-action="AddItemToShoppingCart"
                                    asp-route-id="@item.Id">
-                                <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
+                                    <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))
+                                </a>
                             </p>
                         </div>
                     </div>
@@ -71,4 +133,4 @@
     }
 </div>
 
-@await Html.PartialAsync("_CreateItem", "Movies") 
+@await Html.PartialAsync("_CreateItem", "Movies")
